--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Table Generator</h1>
         <div class="form-container">
             <label for="tableTitle">Table Title:</label>
-            <input type="text" id="tableTitle" placeholder="Enter table title">
+            <input type="text" id="tableTitle" placeholder="Enter Table Title">
             <label for="rows">Number of Rows:</label>
             <input type="number" id="rows" min="1" value="3">
             <label for="columns">Number of Columns:</label>
@@ -22,6 +22,7 @@
         </div>
         <div id="tableContainer"></div>
         <button id="downloadTable">Download Table as Image</button>
+        <button id="clear">Clear</button>
     </div>
     <script src="script.js"></script>
 </body>
